<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/title_normal_new" />

    <LinearLayout
        android:id="@+id/health_bespeak_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/health_product_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/logoshare" />

                <TextView
                    android:id="@+id/health_bespeak_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>

            <include layout="@layout/acitivity_divide_online" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ui_28_dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/health_bespeak_name"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/dimens_sp_14" />

                <EditText
                    android:id="@+id/health_bespeak_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>

            <include layout="@layout/acitivity_divide_online" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ui_28_dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/health_bespeak_phone"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/dimens_sp_14" />

                <EditText
                    android:id="@+id/health_bespeak_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ui_28_dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/health_bespeak_validate_code"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/dimens_sp_14" />

                <EditText
                    android:id="@+id/health_bespeak_input_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_sp_14" />

                <TextView
                    android:id="@+id/health_bespeak_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/app_golden"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ui_28_dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health_bespeak_desc"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/commit_bespeak_health"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_50_dip"
            android:background="@drawable/button_golden_bg"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/health_bespeak_result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="@dimen/ui_15_dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logoshare"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_sp_16"
            android:textColor="@color/black"
            android:text="@string/health_bespeak_order_success"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_sp_16"
            android:textColor="@color/color_666666"
            android:text="@string/health_bespeak_order_suc_desc"/>

    </LinearLayout>
</LinearLayout>